# noctodeus

./: .gitignore  CHANGELOG.md  README.md  TODO.md  components.json  package-lock.json  package.json  test-code-blocks.md  tsconfig.json  vite.config.js
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: noctodeus-product-plan.md
docs/plans/: 2026-04-04-common-sense-features.md  2026-04-04-dashboard-redesign.md  2026-04-04-dashboard-tabs-sidebar-design.md  2026-04-04-editorial-shell-and-rice-runtime-design.md  2026-04-04-media-embeds-design.md  2026-04-05-tiptap-extensions.md  2026-04-06-executable-code-blocks.md  2026-04-06-layout-pass1-component-extraction.md  2026-04-06-midnight-tokyo-ui-overhaul.md  2026-04-06-theme-system.md
docs/specs/: 2026-04-05-tasks-calendar-keyboard-design.md  2026-04-06-executable-code-blocks-design.md  2026-04-06-layout-rework-design.md  2026-04-06-midnight-tokyo-ui-overhaul-design.md  2026-04-06-theme-system-design.md
docs/superpowers/plans/: 2026-04-04-markdown-editor.md  2026-04-07-github-sync.md  2026-04-08-ai-intelligence.md  2026-04-08-inline-ai-editor.md
docs/superpowers/specs/: 2026-04-03-noctodeus-sub1-shell-design.md  (+4 more)
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/ai/: bm25.rs  memory.rs  mod.rs  providers.rs  rag.rs  stream.rs
src-tauri/src/commands/: ai.rs  core.rs  files.rs  graph.rs  import.rs  kernel.rs  log.rs  mcp.rs  mod.rs  rag.rs  research.rs  search.rs  share.rs  sync.rs  url.rs  wiki.rs
src-tauri/src/core/: manifest.rs  mod.rs  state.rs  welcome.rs
src-tauri/src/db/: links.rs  migrations.rs  mod.rs  mutations.rs  pool.rs  queries.rs  schema.rs
src-tauri/src/events/: file_events.rs  mod.rs
src-tauri/src/import/: obsidian.rs
src-tauri/src/indexer/: fts.rs  incremental.rs  mod.rs  scanner.rs  util.rs
src-tauri/src/kernel/: errors.rs  manager.rs  mod.rs  process.rs  protocol.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/mcp/: mod.rs  process.rs  protocol.rs
src-tauri/src/share/: api.rs  crypto.rs
src-tauri/src/sync/: auth.rs  conflict.rs  copy.rs  git.rs  github.rs  icloud.rs  manifest.rs  mod.rs
src-tauri/src/watcher/: debounce.rs  mod.rs
src/lib/: logger.ts
src/routes/: +layout.svelte  +page.svelte
(+200 files in other folders)
