[package]
name = "noctodeus"
version = "0.1.0"
description = "A creative IDE for thought"
authors = ["neur0map"]
edition = "2021"
default-run = "noctodeus"

[lib]
name = "noctodeus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
notify = "7"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
trash = "5"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
tauri-plugin-dialog = "2.6.0"
async-trait = "0.1"
tauri-plugin-fs = "2.5.0"
tauri-plugin-clipboard-manager = "2"
tempfile = "3"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
pbkdf2 = "0.12"
hmac = "0.12"
once_cell = "1"

[[bin]]
name = "noctodeus-mcp"
path = "src/bin/noctodeus_mcp.rs"

[dev-dependencies]
